S1/HAI705/ANTLR/gen/PPParser.java
// Generated from D:/Cours/M1/M1_GL/HAI705/ANTLR/PP.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		Skip=32, Number=33, Read=34, Write=35, True=36, False=37, Var=38, WS=39;
	public static final int
		RULE_programme = 0, RULE_type_variable = 1, RULE_constante = 2, RULE_definir_fonction = 3, 
		RULE_procedure_programme = 4, RULE_nouveau_tab = 5, RULE_get_tab = 6, 
		RULE_set_tab = 7, RULE_allocExpr = 8, RULE_creation_var = 9, RULE_assignation_val = 10, 
		RULE_condition = 11, RULE_while = 12, RULE_procedure_exp = 13, RULE_argument = 14, 
		RULE_nom_variable = 15, RULE_calle = 16, RULE_genere_instruction = 17, 
		RULE_gen_exp_unaire = 18, RULE_gen_exp_binaire = 19, RULE_gen_exp = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"programme", "type_variable", "constante", "definir_fonction", "procedure_programme", 
			"nouveau_tab", "get_tab", "set_tab", "allocExpr", "creation_var", "assignation_val", 
			"condition", "while", "procedure_exp", "argument", "nom_variable", "calle", 
			"genere_instruction", "gen_exp_unaire", "gen_exp_binaire", "gen_exp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'integer'", "'boolean'", "'array of'", "'('", "')'", "':'", "'new'", 
			"'['", "']'", "':='", "'var'", "'if'", "'then'", "'else'", "'while'", 
			"'do'", "','", "';'", "'-'", "'not'", "'+'", "'*'", "'/'", "'<'", "'<='", 
			"'>'", "'>='", "'='", "'!='", "'and'", "'or'", "'skip'", null, "'read'", 
			"'write'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "Skip", "Number", "Read", 
			"Write", "True", "False", "Var", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgrammeContext extends ParserRuleContext {
		public PPProg e;
		public AllocExprContext global;
		public Procedure_programmeContext rul;
		public Genere_instructionContext inst;
		public AllocExprContext allocExpr() {
			return getRuleContext(AllocExprContext.class,0);
		}
		public Genere_instructionContext genere_instruction() {
			return getRuleContext(Genere_instructionContext.class,0);
		}
		public Procedure_programmeContext procedure_programme() {
			return getRuleContext(Procedure_programmeContext.class,0);
		}
		public ProgrammeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterProgramme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitProgramme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitProgramme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammeContext programme() throws RecognitionException {
		ProgrammeContext _localctx = new ProgrammeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programme);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((ProgrammeContext)_localctx).global = allocExpr();
			{
			setState(43);
			((ProgrammeContext)_localctx).rul = procedure_programme();
			}
			setState(44);
			((ProgrammeContext)_localctx).inst = genere_instruction(0);
			((ProgrammeContext)_localctx).e =  new PPProg(((ProgrammeContext)_localctx).global.var,((ProgrammeContext)_localctx).rul.valeur,((ProgrammeContext)_localctx).inst.instr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Type_variableContext extends ParserRuleContext {
		public Type t;
		public Type_variableContext tab;
		public Type_variableContext type_variable() {
			return getRuleContext(Type_variableContext.class,0);
		}
		public Type_variableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterType_variable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitType_variable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitType_variable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_variableContext type_variable() throws RecognitionException {
		Type_variableContext _localctx = new Type_variableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_type_variable);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				match(T__0);
				((Type_variableContext)_localctx).t =  new Int();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(T__1);
				((Type_variableContext)_localctx).t =  new Bool();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				match(T__2);
				setState(52);
				((Type_variableContext)_localctx).tab = type_variable();
				((Type_variableContext)_localctx).t =  new Array(((Type_variableContext)_localctx).tab.t);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstanteContext extends ParserRuleContext {
		public PPExpr co;
		public Token n;
		public TerminalNode Number() { return getToken(PPParser.Number, 0); }
		public TerminalNode False() { return getToken(PPParser.False, 0); }
		public TerminalNode True() { return getToken(PPParser.True, 0); }
		public ConstanteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constante; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterConstante(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitConstante(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitConstante(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstanteContext constante() throws RecognitionException {
		ConstanteContext _localctx = new ConstanteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constante);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Number:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				((ConstanteContext)_localctx).n = match(Number);
				((ConstanteContext)_localctx).co =  new PPCte(Integer.valueOf((((ConstanteContext)_localctx).n!=null?((ConstanteContext)_localctx).n.getText():null)));
				}
				break;
			case False:
				enterOuterAlt(_localctx, 2);
				{
				setState(59);
				match(False);
				((ConstanteContext)_localctx).co =  new PPFalse();
				}
				break;
			case True:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				match(True);
				((ConstanteContext)_localctx).co =  new PPTrue();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definir_fonctionContext extends ParserRuleContext {
		public PPDef r;
		public Nom_variableContext nom_fonction;
		public ArgumentContext arg;
		public Type_variableContext type;
		public AllocExprContext local;
		public Genere_instructionContext instr;
		public Nom_variableContext nom_variable() {
			return getRuleContext(Nom_variableContext.class,0);
		}
		public Genere_instructionContext genere_instruction() {
			return getRuleContext(Genere_instructionContext.class,0);
		}
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public Type_variableContext type_variable() {
			return getRuleContext(Type_variableContext.class,0);
		}
		public AllocExprContext allocExpr() {
			return getRuleContext(AllocExprContext.class,0);
		}
		public Definir_fonctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definir_fonction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterDefinir_fonction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitDefinir_fonction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitDefinir_fonction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definir_fonctionContext definir_fonction() throws RecognitionException {
		Definir_fonctionContext _localctx = new Definir_fonctionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_definir_fonction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			((Definir_fonctionContext)_localctx).nom_fonction = nom_variable();
			setState(66);
			match(T__3);
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Var) {
				{
				{
				setState(67);
				((Definir_fonctionContext)_localctx).arg = argument();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(T__4);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(74);
				match(T__5);
				setState(75);
				((Definir_fonctionContext)_localctx).type = type_variable();
				((Definir_fonctionContext)_localctx).r =  new PPFun(_localctx.r.name,_localctx.r.args,_localctx.r.locals,_localctx.r.code,((Definir_fonctionContext)_localctx).type.t);
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(80);
				((Definir_fonctionContext)_localctx).local = allocExpr();
				}
			}

			setState(83);
			((Definir_fonctionContext)_localctx).instr = genere_instruction(0);
			((Definir_fonctionContext)_localctx).r =  new PPProc((((Definir_fonctionContext)_localctx).nom_fonction!=null?_input.getText(((Definir_fonctionContext)_localctx).nom_fonction.start,((Definir_fonctionContext)_localctx).nom_fonction.stop):null),((Definir_fonctionContext)_localctx).arg.args,((Definir_fonctionContext)_localctx).local.var,((Definir_fonctionContext)_localctx).instr.instr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Procedure_programmeContext extends ParserRuleContext {
		public ArrayList<PPDef> valeur;
		public Definir_fonctionContext def;
		public List<Definir_fonctionContext> definir_fonction() {
			return getRuleContexts(Definir_fonctionContext.class);
		}
		public Definir_fonctionContext definir_fonction(int i) {
			return getRuleContext(Definir_fonctionContext.class,i);
		}
		public Procedure_programmeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure_programme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterProcedure_programme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitProcedure_programme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitProcedure_programme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Procedure_programmeContext procedure_programme() throws RecognitionException {
		Procedure_programmeContext _localctx = new Procedure_programmeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedure_programme);
		((Procedure_programmeContext)_localctx).valeur =  new ArrayList<PPDef>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86);
					((Procedure_programmeContext)_localctx).def = definir_fonction();
					_localctx.valeur.add(((Procedure_programmeContext)_localctx).def.r);
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Nouveau_tabContext extends ParserRuleContext {
		public Type_variableContext type_variable() {
			return getRuleContext(Type_variableContext.class,0);
		}
		public Gen_expContext gen_exp() {
			return getRuleContext(Gen_expContext.class,0);
		}
		public Nouveau_tabContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nouveau_tab; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterNouveau_tab(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitNouveau_tab(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitNouveau_tab(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Nouveau_tabContext nouveau_tab() throws RecognitionException {
		Nouveau_tabContext _localctx = new Nouveau_tabContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_nouveau_tab);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__6);
			setState(95);
			type_variable();
			setState(96);
			match(T__7);
			setState(97);
			gen_exp();
			setState(98);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Get_tabContext extends ParserRuleContext {
		public Nom_variableContext nom_variable() {
			return getRuleContext(Nom_variableContext.class,0);
		}
		public Gen_expContext gen_exp() {
			return getRuleContext(Gen_expContext.class,0);
		}
		public Get_tabContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get_tab; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterGet_tab(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitGet_tab(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitGet_tab(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Get_tabContext get_tab() throws RecognitionException {
		Get_tabContext _localctx = new Get_tabContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_get_tab);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			nom_variable();
			setState(101);
			match(T__7);
			setState(102);
			gen_exp();
			setState(103);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Set_tabContext extends ParserRuleContext {
		public PPArraySet set_tab_var;
		public Gen_expContext expr1;
		public Gen_expContext expr2;
		public Gen_expContext expr3;
		public List<Gen_expContext> gen_exp() {
			return getRuleContexts(Gen_expContext.class);
		}
		public Gen_expContext gen_exp(int i) {
			return getRuleContext(Gen_expContext.class,i);
		}
		public Set_tabContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_tab; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterSet_tab(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitSet_tab(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitSet_tab(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Set_tabContext set_tab() throws RecognitionException {
		Set_tabContext _localctx = new Set_tabContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_set_tab);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			((Set_tabContext)_localctx).expr1 = gen_exp();
			setState(106);
			match(T__7);
			setState(107);
			((Set_tabContext)_localctx).expr2 = gen_exp();
			setState(108);
			match(T__8);
			setState(109);
			match(T__9);
			setState(110);
			((Set_tabContext)_localctx).expr3 = gen_exp();
			((Set_tabContext)_localctx).set_tab_var =  new PPArraySet(((Set_tabContext)_localctx).expr1.expr,((Set_tabContext)_localctx).expr2.expr,((Set_tabContext)_localctx).expr3.expr);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AllocExprContext extends ParserRuleContext {
		public ArrayList<creation_var<String,Type>> var;
		public Creation_varContext v;
		public List<Creation_varContext> creation_var() {
			return getRuleContexts(Creation_varContext.class);
		}
		public Creation_varContext creation_var(int i) {
			return getRuleContext(Creation_varContext.class,i);
		}
		public AllocExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allocExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterAllocExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitAllocExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitAllocExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllocExprContext allocExpr() throws RecognitionException {
		AllocExprContext _localctx = new AllocExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_allocExpr);
		((AllocExprContext)_localctx).var =  new ArrayList<creation_var<String,Type>>();
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(113);
			match(T__10);
			setState(117); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(114);
					((AllocExprContext)_localctx).v = creation_var();
					_localctx.var.add(((AllocExprContext)_localctx).v.p);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(119); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Creation_varContext extends ParserRuleContext {
		public creation_var<String,Type> p;
		public Nom_variableContext string;
		public Type_variableContext type;
		public Nom_variableContext nom_variable() {
			return getRuleContext(Nom_variableContext.class,0);
		}
		public Type_variableContext type_variable() {
			return getRuleContext(Type_variableContext.class,0);
		}
		public Creation_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creation_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).enterCreation_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PPListener ) ((PPListener)listener).exitCreation_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PPVisitor ) return ((PPVisitor<? extends T>)visitor).visitCreation_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Creation_varContext creation_var() throws RecognitionException {
		Creation_varContext _localctx = new Creation_varContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_creation_var);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			((Creation_varContext)_localctx).string = nom_variable();
			setState(122);
			match(T__5);
			setState(123);
			((Creation_varContext)_localctx).type = type_variable();
			((Creation_varContext)_localctx).p =  new creation_var(((Creation_varContext)_localctx).string.var.name,((Creation_varContext)_localctx).type.t);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
